updated package-lock.json changed some formatting
Name    :   Maricel Louise Sumulong
Date    :   May 06, 2019 PDT
E-mail  :   mllsumulong@gmail.com

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,6 +49,10 @@ nav, .page-footer {
     /*URL to font*/
 }
 
+button, input, textarea {
+	font-family: 'Georgia', Times, Times New Roman, serif !important;
+}
+
 /* NAVIGATION BAR */
 
 .nav-wrapper {
