--- a/views/pages/portfolio.ejs
+++ b/views/pages/portfolio.ejs
@@ -135,12 +135,11 @@
 	</li>
 	<li id="c10" class='projDef dispHide'>
 		<p>
-			It’s a single-player trivia game. The player also belongs to a team upon a sign-up. Each question correctly answered adds random points to both the player and the player team’s score. At the end of each game, the player can see his score, rank and the overall ranking of his team. He can also checkout the Leaderboard to see the scores and rankings of all the players and teams.
+			It’s a single-player trivia game. The player also belongs to a team upon a sign-up. Each question correctly answered adds random points to both the player and the player team’s score. At the end of each game, the player can see his score, rank and the overall ranking of his team. He can also checkout the Leaderboard to see the scores and rankings of all the players and teams. Co-developed with <i><b>Juthika Shetye</b></i>.
 			<a href="https://ucb-quiz-app.herokuapp.com" target="_blank" data-position="bottom" data-tooltip="Click To See Project" class="tooltipped">
 				<i class="fas fa-external-link-alt"></i>
 			</a>
 		</p>
-		<p>Co-developed With: <i><b>Juthika Shetye</b></i></p
 		<p>Tools Used: <i><b>JQuery, HTML5, CSS3, BootStrap and NodeJS</b></i></p>
 		<p>Node Packages Used: <i><b>MySQL, ExpressJS, Body-Parser, Method-Override, DotEnv, Express-Session, MD5 and Cookie-Parser</b></i></p>
 	</li>
