--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Making My Dreams Come True</title>
-	<!--<link rel="shortcut icon" type="text/css" href="./icons/paris.ico">-->
+	<link rel="shortcut icon" type="text/css" href="./icons/paris.ico">
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
