- changed alignment for the copyright - changed height for the pdf viewer
Name    :   Maricel Louise Sumulong
Date    :   May 07, 2019 PDT
E-mail  :   mllsumulong@gmail.com

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,7 +85,11 @@ footer {
 	width: 100%;
 	bottom: 0;
 	/*text-align: center;*/
-	padding: 20px;
+	/*padding: 20px;*/
+}
+
+.cright {
+	height: 6.25vh;
 }
 
 .page-footer a {
@@ -230,3 +234,4 @@ iframe {
 	align-items: center;
 	padding-top: 5%;
 }
+
