--- a/views/pages/main.ejs
+++ b/views/pages/main.ejs
@@ -20,3 +20,5 @@
 		<div class="right-align frenchFonts"><p><img class="responsive-img animated fadeInUp slower" src="../images/welcome.png"></p></div>
 	</div>
 </div>
+
+<!-- images from https://textfx.co -->
