--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="footer page-footer">	
 	<div class="footer-copyright">
 	    <div class="container">
-		    © 2019 Copyright
+		    <div class="left cright valign-wrapper">© 2019 Copyright</div>
 		    <div class="right">
 		    	<a href="https://www.facebook.com/azhelle16" target="_blank" data-position="top" data-tooltip="You need to be logged in on your account to see my profile 😉" class="tooltipped">
 		    		<i class="fab fa-facebook-square fa-3x">
