--- a/views/pages/resume.ejs
+++ b/views/pages/resume.ejs
@@ -1,4 +1,1 @@
-<!--<iframe src="http://docs.google.com/gview?url=https://drive.google.com/open?id=16IhUYLp1bF4KwuD-WpplmnzY5QJdCyLH&embedded=true" 
-style="width:600px; height:500px;" frameborder="0"></iframe>-->
-
-<iframe src="./docs/resume.pdf" style="width:400px; height:600px;" frameborder="0"></iframe>
+<iframe src="./docs/resume.pdf" style="width:100vw; height:75vh;" frameborder="0"></iframe>
