- added the Clicky Game homework
Name    :   Maricel Louise Sumulong
Date    :   May 14, 2019 PDT
E-mail  :   mllsumulong@gmail.com

--- a/views/pages/portfolio.ejs
+++ b/views/pages/portfolio.ejs
@@ -45,6 +45,10 @@
     	<img src="./images/hpwsa.png">
     	<p class="projTitle dispHide">NEWS SCRAPER</p>
     </a>
+    <a class="carousel-item" href="#c12">
+    	<img src="./images/clicky-game.png">
+    	<p class="projTitle dispHide">CLICKY-GAME</p>
+    </a>
 </div>
 
 <ul>
@@ -152,5 +156,14 @@
 		</p>
 		<p>Tools Used: <i><b>JQuery, EJS, CSS3, BootStrap and NodeJS</b></i></p>
 		<p>Node Packages Used: <i><b>ExpressJS, Axios, Request, Cheerio, Body-Parser and MongoJS</b></i></p>
+	</li>
+	<li id="c12" class='projDef dispHide'>
+		<p>
+			A memory game inspired application where the user will select the images once. If the user, select the same image, the game will restart. Clicking the logo or game title will restart all scores to 0.
+			<a href="https://azhelle16.github.io/Clicky-Game/" target="_blank" data-position="bottom" data-tooltip="Click To See Project" class="tooltipped">
+				<i class="fas fa-external-link-alt"></i>
+			</a>
+		</p>
+		<p>Tools Used: <i><b>Materialize, ReactJS</b></i></p>
 	</li>
 </ul>
