--- a/views/pages/portfolio.ejs
+++ b/views/pages/portfolio.ejs
@@ -49,6 +49,14 @@
     	<img src="./images/clicky-game.png">
     	<p class="projTitle dispHide">CLICKY-GAME</p>
     </a>
+    <a class="carousel-item" href="#c13">
+    	<img src="./images/tip-me-node.png">
+    	<p class="projTitle dispHide">TIP ME (CLI)</p>
+    </a>
+    <a class="carousel-item" href="#c14">
+    	<img src="./images/tip-me-ui.png">
+    	<p class="projTitle dispHide">TIP ME (GUI)</p>
+    </a>
 </div>
 
 <ul>
@@ -165,5 +173,24 @@
 			</a>
 		</p>
 		<p>Tools Used: <i><b>Materialize, ReactJS</b></i></p>
+	</li>
+	<li id="c13" class='projDef dispHide'>
+		<p>
+			A command-line interface that computes tip for a particular restaurant server. An entry for Trilogy Online Coding Challenge.
+			<a href="https://github.com/azhelle16/Tip-Me" target="_blank" data-position="bottom" data-tooltip="Click To See Project" class="tooltipped">
+				<i class="fas fa-external-link-alt"></i>
+			</a>
+		</p>
+		<p>Tools Used: <i><b>NodeJS</b></i></p>
+		<p>Node Packages Used: <i><b>CLI-Table, Requirer and Inquirer</b></i></p>
+	</li>
+	<li id="c12" class='projDef dispHide'>
+		<p>
+			A web application that computes tip for a particular restaurant server. An entry for Trilogy Online Coding Challenge.
+			<a href="https://azhelle16.github.io/Tip-Me-2/" target="_blank" data-position="bottom" data-tooltip="Click To See Project" class="tooltipped">
+				<i class="fas fa-external-link-alt"></i>
+			</a>
+		</p>
+		<p>Tools Used: <i><b>Materialize, JQuery, HTML5, CSS3</b></i></p>
 	</li>
 </ul>
