--- a/views/pages/portfolio.ejs
+++ b/views/pages/portfolio.ejs
@@ -66,6 +66,9 @@
 			<a href="https://azhelle16.github.io/Word-Guess-Game/" target="_blank" data-position="bottom" data-tooltip="Click To See Project" class="tooltipped">
 				<i class="fas fa-external-link-alt"></i>
 			</a>
+			<a href="https://github.com/azhelle16/Word-Guess-Game" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repository" class="tooltipped">
+				<i class="fab fa-github"></i>
+			</a>
 		</p>
 		<p>Tools Used: <i><b>JavaScript, HTML5, CSS3</b></i></p>
 	</li>
@@ -74,6 +77,9 @@
 			In this project, the user will be given a random number at the start of the game. There are four crystals to play with. By clicking on a crystal, it will add a specific amount of points to the score. The user wins the game by matching his total score to the random number. Otherwise, the user loses the game if the total score goes above the random number. The value of each crystal is hidden from the until it's clicked. Each time the game starts, the game will change the value of each crystal.
 			<a href="https://azhelle16.github.io/Unit-4-Game/" target="_blank" data-position="bottom" data-tooltip="Click To See Project" class="tooltipped">
 				<i class="fas fa-external-link-alt"></i>
+			</a>
+			<a href="https://github.com/azhelle16/Unit-4-Game" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repository" class="tooltipped">
+				<i class="fab fa-github"></i>
 			</a>
 		</p>
 		<p>Tools Used: <i><b>JQuery, HTML5, CSS3</b></i></p>		
@@ -84,6 +90,9 @@
 			<a href="https://azhelle16.github.io/Trivia-Game-2/" target="_blank" data-position="bottom" data-tooltip="Click To See Project" class="tooltipped">
 				<i class="fas fa-external-link-alt"></i>
 			</a>
+			<a href="https://github.com/azhelle16/Trivia-Game-2" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repository" class="tooltipped">
+				<i class="fab fa-github"></i>
+			</a>
 		</p>
 		<p>Tools Used: <i><b>JQuery, HTML5, CSS3</b></i></p>
 	</li>
@@ -92,6 +101,9 @@
 			The user will select both players to be the main character and the defender. The main character will be on the left side while the defender will be on the right side. After selecting the players, click the attack button to begin the battle. When the main character wins, the user will select another player to battle. This will continue until the main character has enough HP to battle other player. When the main character loses, a restart button will appear and when clicked, the user will choose two new players to start the game.
 			<a href="https://azhelle16.github.io/RPG-Game/" target="_blank" data-position="bottom" data-tooltip="Click To See Project" class="tooltipped">
 				<i class="fas fa-external-link-alt"></i>
+			</a>
+			<a href="https://github.com/azhelle16/RPG-Game" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repository" class="tooltipped">
+				<i class="fab fa-github"></i>
 			</a>
 		</p>
 		<p>Tools Used: <i><b>JQuery, HTML5, CSS3</b></i></p>
@@ -102,6 +114,9 @@
 			<a href="https://azhelle16.github.io/GifTastic/" target="_blank" data-position="bottom" data-tooltip="Click To See Project" class="tooltipped">
 				<i class="fas fa-external-link-alt"></i>
 			</a>
+			<a href="https://github.com/azhelle16/GifTastic" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repository" class="tooltipped">
+				<i class="fab fa-github"></i>
+			</a>
 		</p>
 		<p>Tools Used: <i><b>JQuery, HTML5, CSS3 and BootStrap</b></i></p>		
 	</li>
@@ -110,6 +125,9 @@
 			LIRI is like iPhone's SIRI. However, while SIRI is a Speech Interpretation and Recognition Interface, LIRI is a Language Interpretation and Recognition Interface. LIRI will be a command line node app that takes in parameters and gives you back data.
 			<a href="https://github.com/azhelle16/LIRI-Node-App" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repo" class="tooltipped">
 				<i class="fas fa-external-link-alt"></i>
+			</a>
+			<a href="https://github.com/azhelle16/LIRI-Node-App" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repository" class="tooltipped">
+				<i class="fab fa-github"></i>
 			</a>
 		</p>
 		<p>Tools Used: <i><b>NodeJS</b></i></p>
@@ -121,6 +139,9 @@
 			<a href="https://github.com/azhelle16/Bamazon-1" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repo" class="tooltipped">
 				<i class="fas fa-external-link-alt"></i>
 			</a>
+			<a href="https://github.com/azhelle16/Bamazon-1" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repository" class="tooltipped">
+				<i class="fab fa-github"></i>
+			</a>
 		</p>
 		<p>Tools Used: <i><b>NodeJS</b></i></p>
 		<p>Node Packages Used: <i><b>CLI-Table, MySQL and Inquirer</b></i></p>
@@ -130,6 +151,9 @@
 			An extension of the first Bamazon Project, the user is now allowed to check inventories and its quantities, add stocks and add new products.
 			<a href="https://github.com/azhelle16/Bamazon-2" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repo" class="tooltipped">
 				<i class="fas fa-external-link-alt"></i>
+			</a>
+			<a href="https://github.com/azhelle16/Bamazon-2" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repository" class="tooltipped">
+				<i class="fab fa-github"></i>
 			</a>
 		</p>
 		<p>Tools Used: <i><b>NodeJS</b></i></p>
@@ -141,6 +165,9 @@
 			<a href="https://ucb-friend-finder-app.herokuapp.com" target="_blank" data-position="bottom" data-tooltip="Click To See Project" class="tooltipped">
 				<i class="fas fa-external-link-alt"></i>
 			</a>
+			<a href="https://github.com/azhelle16/Friend-Finder" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repository" class="tooltipped">
+				<i class="fab fa-github"></i>
+			</a>
 		</p>
 		<p>Tools Used: <i><b>JQuery, HTML5, CSS3 and NodeJS</b></i></p>
 		<p>Node Packages Used: <i><b>MySQL, ExpressJS, Body-Parser, Method-Override, DotEnv and Path</b></i></p>
@@ -150,6 +177,9 @@
 			It’s a single-player trivia game. The player also belongs to a team upon a sign-up. Each question correctly answered adds random points to both the player and the player team’s score. At the end of each game, the player can see his score, rank and the overall ranking of his team. He can also checkout the Leaderboard to see the scores and rankings of all the players and teams. Co-developed with <i><b>Juthika Shetye</b></i>.
 			<a href="https://ucb-quiz-app.herokuapp.com" target="_blank" data-position="bottom" data-tooltip="Click To See Project" class="tooltipped">
 				<i class="fas fa-external-link-alt"></i>
+			</a>
+			<a href="https://github.com/azhelle16/Quiz-App" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repository" class="tooltipped">
+				<i class="fab fa-github"></i>
 			</a>
 		</p>
 		<p>Tools Used: <i><b>JQuery, HTML5, CSS3, BootStrap and NodeJS</b></i></p>
@@ -161,6 +191,9 @@
 			<a href="https://ucb-news-scraper.herokuapp.com" target="_blank" data-position="bottom" data-tooltip="Click To See Project" class="tooltipped">
 				<i class="fas fa-external-link-alt"></i>
 			</a>
+			<a href="https://github.com/azhelle16/MongoDB-Scrape" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repository" class="tooltipped">
+				<i class="fab fa-github"></i>
+			</a>
 		</p>
 		<p>Tools Used: <i><b>JQuery, EJS, CSS3, BootStrap and NodeJS</b></i></p>
 		<p>Node Packages Used: <i><b>ExpressJS, Axios, Request, Cheerio, Body-Parser and MongoJS</b></i></p>
@@ -171,6 +204,9 @@
 			<a href="https://azhelle16.github.io/Clicky-Game/" target="_blank" data-position="bottom" data-tooltip="Click To See Project" class="tooltipped">
 				<i class="fas fa-external-link-alt"></i>
 			</a>
+			<a href="https://github.com/azhelle16/Clicky-Game" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repository" class="tooltipped">
+				<i class="fab fa-github"></i>
+			</a>
 		</p>
 		<p>Tools Used: <i><b>Materialize, ReactJS</b></i></p>
 	</li>
@@ -179,6 +215,9 @@
 			A command-line interface that computes tip for a particular restaurant server. An entry for Trilogy Online Coding Challenge.
 			<a href="https://github.com/azhelle16/Tip-Me" target="_blank" data-position="bottom" data-tooltip="Click To See Project" class="tooltipped">
 				<i class="fas fa-external-link-alt"></i>
+			</a>
+			<a href="https://github.com/azhelle16/Tip-Me" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repository" class="tooltipped">
+				<i class="fab fa-github"></i>
 			</a>
 		</p>
 		<p>Tools Used: <i><b>NodeJS</b></i></p>
@@ -189,6 +228,9 @@
 			A web application that computes tip for a particular restaurant server. An entry for Trilogy Online Coding Challenge.
 			<a href="https://azhelle16.github.io/Tip-Me-2/" target="_blank" data-position="bottom" data-tooltip="Click To See Project" class="tooltipped">
 				<i class="fas fa-external-link-alt"></i>
+			</a>
+			<a href="https://github.com/azhelle16/Tip-Me-2" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repository" class="tooltipped">
+				<i class="fab fa-github"></i>
 			</a>
 		</p>
 		<p>Tools Used: <i><b>Materialize, JQuery, HTML5, CSS3</b></i></p>
