- Added new project details - Made the copyright date dynamic
Name    :   Maricel Louise Sumulong
Date    :   July 18, 2020 PDT
E-mail  :   mllsumulong@gmail.com

--- a/views/pages/portfolio.ejs
+++ b/views/pages/portfolio.ejs
@@ -56,6 +56,14 @@
     <a class="carousel-item" href="#c14">
     	<img src="./images/tip-me-ui.png">
     	<p class="projTitle dispHide">TIP ME (GUI)</p>
+	</a>
+	<a class="carousel-item" href="#c15">
+    	<img src="./images/xylophone.png">
+    	<p class="projTitle dispHide">XYLOPHONE</p>
+	</a>
+	<a class="carousel-item" href="#c16">
+    	<img src="./images/eggtimer.png">
+    	<p class="projTitle dispHide">EGG TIMER</p>
     </a>
 </div>
 
@@ -123,9 +131,6 @@
 	<li id="c6" class='projDef dispHide'>
 		<p>
 			LIRI is like iPhone's SIRI. However, while SIRI is a Speech Interpretation and Recognition Interface, LIRI is a Language Interpretation and Recognition Interface. LIRI will be a command line node app that takes in parameters and gives you back data.
-			<a href="https://github.com/azhelle16/LIRI-Node-App" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repo" class="tooltipped">
-				<i class="fas fa-external-link-alt"></i>
-			</a>
 			<a href="https://github.com/azhelle16/LIRI-Node-App" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repository" class="tooltipped">
 				<i class="fab fa-github"></i>
 			</a>
@@ -136,9 +141,6 @@
 	<li id="c7" class='projDef dispHide'>
 		<p>
 			Bamazon will be a command line node app that behaves like the Amazon Store. It will allow the user to make purchase. Each valid purchases will update the database and will prompt user insufficient quantity if stock left does not meet the required number of purchases.
-			<a href="https://github.com/azhelle16/Bamazon-1" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repo" class="tooltipped">
-				<i class="fas fa-external-link-alt"></i>
-			</a>
 			<a href="https://github.com/azhelle16/Bamazon-1" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repository" class="tooltipped">
 				<i class="fab fa-github"></i>
 			</a>
@@ -149,9 +151,6 @@
 	<li id="c8" class='projDef dispHide'>
 		<p>
 			An extension of the first Bamazon Project, the user is now allowed to check inventories and its quantities, add stocks and add new products.
-			<a href="https://github.com/azhelle16/Bamazon-2" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repo" class="tooltipped">
-				<i class="fas fa-external-link-alt"></i>
-			</a>
 			<a href="https://github.com/azhelle16/Bamazon-2" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repository" class="tooltipped">
 				<i class="fab fa-github"></i>
 			</a>
@@ -213,9 +212,6 @@
 	<li id="c13" class='projDef dispHide'>
 		<p>
 			A command-line interface that computes tip for a particular restaurant server. An entry for Trilogy Online Coding Challenge.
-			<a href="https://github.com/azhelle16/Tip-Me" target="_blank" data-position="bottom" data-tooltip="Click To See Project" class="tooltipped">
-				<i class="fas fa-external-link-alt"></i>
-			</a>
 			<a href="https://github.com/azhelle16/Tip-Me" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repository" class="tooltipped">
 				<i class="fab fa-github"></i>
 			</a>
@@ -234,5 +230,35 @@
 			</a>
 		</p>
 		<p>Tools Used: <i><b>Materialize, JQuery, HTML5, CSS3</b></i></p>
+	</li>
+	<li id="c15" class='projDef dispHide'>
+		<p>
+			A musical IOS application built using AVFoundation and AVAudioPlayer. This application was created to understand Apple Documentaion and how to use StackOverflow. This application helps the user the following: 
+			<i><b>Functions and Methods in Swift, Data Types, Swift Loops, The ViewController LifeCycle, Error Handling In Swift, Code Refactoring and Basic Debugging</b></i>. 
+			<br><br>
+			This is a companion project to The App Brewery's Complete App Development Bootcamp, check out the full course at 
+			<a href="https://www.appbrewery.co/" target="_blank" class="tooltipped">
+				<i>www.appbrewery.co</i>
+			</a>.
+			<a href="https://github.com/azhelle16/Xylophone-iOS" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repository" class="tooltipped">
+				<i class="fab fa-github"></i>
+			</a>
+		</p>
+		<p>Tools Used: <i><b>Swift</b></i></p>
+	</li>
+	<li id="c16" class='projDef dispHide'>
+		<p>
+			An iOS application built to test our knowledge in the following:
+			<i><b>Swift Collection Types (Dictionaries), The Swift Timer API, Conditional Statements (If-Else / Switch), Functions with Outputs and How To Use The ProgressView</b></i>. 
+			<br><br>
+			This is a companion project to The App Brewery's Complete App Development Bootcamp, check out the full course at 
+			<a href="https://www.appbrewery.co/" target="_blank" class="tooltipped">
+				<i>www.appbrewery.co</i>
+			</a>.
+			<a href="https://github.com/azhelle16/EggTimer-IOS" target="_blank" data-position="bottom" data-tooltip="Click To See Github Repository" class="tooltipped">
+				<i class="fab fa-github"></i>
+			</a>
+		</p>
+		<p>Tools Used: <i><b>Swift</b></i></p>
 	</li>
 </ul>
