Updating portfolio website
Name    :   Maricel Louise Sumulong
Date    :   June 01, 2021 PDT
E-mail  :   mllsumulong@gmail.com

--- a/views/pages/portfolio.ejs
+++ b/views/pages/portfolio.ejs
@@ -41,10 +41,10 @@
     	<img src="./images/triviosa.png">
     	<p class="projTitle dispHide">TRIVIOSA</p>
     </a>
-    <a class="carousel-item" href="#c11">
+    <!-- <a class="carousel-item" href="#c11">
     	<img src="./images/hpwsa.png">
     	<p class="projTitle dispHide">NEWS SCRAPER</p>
-    </a>
+    </a> -->
     <a class="carousel-item" href="#c12">
     	<img src="./images/clicky-game.png">
     	<p class="projTitle dispHide">CLICKY-GAME</p>
@@ -184,7 +184,7 @@
 		<p>Tools Used: <i><b>JQuery, HTML5, CSS3, BootStrap and NodeJS</b></i></p>
 		<p>Node Packages Used: <i><b>MySQL, ExpressJS, Body-Parser, Method-Override, DotEnv, Express-Session, MD5 and Cookie-Parser</b></i></p>
 	</li>
-	<li id="c11" class='projDef dispHide'>
+	<!-- <li id="c11" class='projDef dispHide'>
 		<p>
 			A web application that lets users view and saved articles, leave and delete comments on the latest news.
 			<a href="https://ucb-news-scraper.herokuapp.com" target="_blank" data-position="bottom" data-tooltip="Click To See Project" class="tooltipped">
@@ -196,7 +196,7 @@
 		</p>
 		<p>Tools Used: <i><b>JQuery, EJS, CSS3, BootStrap and NodeJS</b></i></p>
 		<p>Node Packages Used: <i><b>ExpressJS, Axios, Request, Cheerio, Body-Parser and MongoJS</b></i></p>
-	</li>
+	</li> -->
 	<li id="c12" class='projDef dispHide'>
 		<p>
 			A memory game inspired application where the user will select the images once. If the user, select the same image, the game will restart. Clicking the logo or game title will restart all scores to 0.
