--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -6,13 +6,13 @@
         <li><a href="/about">About</a></li>
         <li><a href="/portfolio">Projects</a></li>
         <li><a href="/resume">Resume</a></li>
-        <li><a href="/contact">Contact</a></li>
+        <!-- <li><a href="/contact">Contact</a></li> -->
       </ul>
     </div>
     <ul class="sidenav" id="mobile-demo">
 	    <li><a href="/about">About</a></li>
         <li><a href="/portfolio">Projects</a></li>
         <li><a href="/resume">Resume</a></li>
-        <li><a href="/contact">Contact</a></li>
+        <!-- <li><a href="/contact">Contact</a></li> -->
 	</ul>
 </nav>
